--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-Do List App</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>To-Do List</h1>
+
+    <form id="todo-form">
+      <input type="text" id="todo-input" placeholder="Add a new task..." required>
+      <input type="date" id="date-input" required>
+      <button type="submit">Add</button>
+    </form>
+
+    <div class="filter">
+      <input type="text" id="filter-input" placeholder="Filter tasks...">
+    </div>
+
+    <ul id="todo-list"></ul>
+  </div>
+
+  <script src="js/script.js"></script>
+</body>
+</html>
 
